--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  overflow-x: visible;
+  margin: 0;
+  padding: 0;
+}
+
+
 .main_bg {
-  background: rgb(152, 77, 56);
+  background: rgb(255, 255, 255);
   background: linear-gradient(
     95deg,
-    rgba(151, 77, 55, 1) 0%,
-    rgba(24, 30, 65, 1) 50%
+    rgb(0, 0, 0) 0%,
+    rgb(0, 0, 0) 50%
   );
 }
 
@@ -16,8 +23,8 @@
   background: rgb(183, 92, 255);
   background: linear-gradient(
     193deg,
-    rgba(183, 92, 255, 1) 15%,
-    rgba(103, 26, 228, 1) 89%
+    #6e46d5 15%,
+    #937BD0 89%
   );
 }
 
@@ -30,3 +37,4 @@
       rgba(103, 26, 228, 1) 89%
     );
 }
+
